# smartlist_budget

./: Package.resolved  Package.swift  docker-compose.yml  package.yaml  smartlist-budget.cabal  stack.yaml
Request/Tender/: get.http  post.http
Sources/App/: AuthenticateMiddleware.swift  configure.swift  routes.swift  schema.swift
Sources/App/Controllers/: BasketController.swift  BasketDescriptionController.swift  BudgetController.swift  InvoiceController.swift  ItemController.swift  TenderController.swift
Sources/App/DTOs/: BasketDTO.swift  BasketDescriptionDTO.swift  BasketDescriptionUpdateDTO.swift  BasketUpdateDTO.swift  BudgetDTO.swift  BudgetViewDTO.swift  InvoiceDTO.swift  ItemDTO.swift  TenderDTO.swift
Sources/App/Migrations/: CreateBasket.swift  CreateBasketDescription.swift  CreateBudget.swift  CreateInvoice.swift  CreateItem.swift  CreateTender.swift  UpdateBudget.swift
Sources/App/Models/: Basket.swift  BasketDesscription.swift  Budget.swift  BudgetView.swift  Invoice.swift  Item.swift  Payload.swift  Tender.swift
src/: Main.hs
src/controller/: BasketController.hs  BasketDescController.hs  BudgetController.hs  InvoiceController.hs  ItemController.hs  TenderController.hs
src/db/: Basket.hs  BasketDesc.hs  Budget.hs  Invoice.hs  Item.hs  Tender.hs
src/dto/: BasketDTO.hs  BasketDescDTO.hs  BudgetDTO.hs  ErrorMessage.hs  InvoiceDTO.hs  ItemDTO.hs  Payload.hs  TenderDTO.hs
src/helpers/: Evaluator.hs  Hardcoded.hs
src/repository/: Repository.hs
src/service/: Service.hs  ServiceHelper.hs
